tests/common/snapshots/e2e_tests__common__visual_testing__File Explorer__explorer_open.snap
---
source: tests/common/visual_testing.rs
expression: "&screen_text"
---
┌ File Explorer ───────┐ [No Name]                                              
│▼ project_root        │    1 │                                                █
│  ▶ src               │                                                       █
│    README.md         │                                                       █
│                      │                                                       █
│                      │                                                       █
│                      │                                                       █
│                      │                                                       █
│                      │                                                       █
│                      │                                                       █
│                      │                                                       █
│                      │                                                       █
│                      │                                                       █
│                      │                                                       █
│                      │                                                       █
│                      │                                                       █
│                      │                                                       █
│                      │                                                       █
│                      │                                                       █
│                      │                                                       █
│                      │                                                       █
│                      │                                                       █
│                      │                                                       █
│                      │                                                       █
│                      │                                                       █
│                      │                                                       █
│                      │                                                       █
│                      │                                                       █
└──────────────────────┘                                                       █
[No Name] | Ln 0, Col 0 | File explorer ready
