tests/common/snapshots/e2e_tests__common__visual_testing__File Explorer__initial.snap
---
source: tests/common/visual_testing.rs
expression: "&screen_text"
---
 [No Name]                                                                      
    1 │                                                                        █
                                                                               █
                                                                               █
                                                                               █
                                                                               █
                                                                               █
                                                                               █
                                                                               █
                                                                               █
                                                                               █
                                                                               █
                                                                               █
                                                                               █
                                                                               █
                                                                               █
                                                                               █
                                                                               █
                                                                               █
                                                                               █
                                                                               █
                                                                               █
                                                                               █
                                                                               █
                                                                               █
                                                                               █
                                                                               █
                                                                               █
                                                                               █
[No Name] | Ln 0, Col 0
